--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,8 @@
       content="Site de notícias regionais"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>Serra Notícias</title>
   </head>
   <body>
